style.css
/*
Theme Name: Northern Media
Theme URI: http://www.northernmediauk.com;
Author: Northern Media
Author URI: http://www.northernmediauk.com
Description: A Web site built for Northern Media, by Northern Media
Version: 1.0.0
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Text Domain: northern_media
Tags:

This theme, like WordPress, is licensed under the GPL.
Use it to make something cool, have fun, and share what you've learned with others.

Northern Media is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
Underscores is distributed under the terms of the GNU GPL v2 or later.

Normalizing styles have been helped along thanks to the fine work of
Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
*/

/*--------------------------------------------------------------
>>> TABLE OF CONTENTS:
----------------------------------------------------------------
*/

.sub-nav {
    margin-bottom: 0px !important;
    border: none;
    border-radius: 0px !important;
}

.map-container {
    width: 100%;
}
.map-container iframe{
    width: 100%;
    display: block;
    pointer-events: none;
    position: relative; /* IE needs a position other than static */
}
.map-container iframe.clicked{
    pointer-events: auto;
}

#newsletter-subscription li:first-of-type {
    font-weight: bold;
}

/*FIX SPACING ISSUES*/
#team, #recent-projects, #latest-news, #contact, #social-hub, #clients, #our-agency {
    padding: 50px 0;
}

.section-title {
    padding: 0px 0px 40px 0px;
    margin-bottom: 40px;
}

#contact .intro p:first-of-type {
    margin-bottom: 40px;
}

#contact-form p {
    margin-bottom: 0px !important;
}

#latest-news p {
    margin-bottom: 40px;
}

.swiper-container-home {
    /*height: 70vh !important;*/
}

#team-button, #recent-projects .button {
    margin-top: 40px;
}

.slide-bg {
background: -webkit-linear-gradient(left, rgb(169, 106, 141) 0%, rgb(95, 95, 110) 40%, rgb(87, 109, 90) 67%, rgb(195, 214, 0)100%);
background: -o-linear-gradient(left, rgb(169, 106, 141) 0%, rgb(95, 95, 110) 40%, rgb(87, 109, 90) 67%, rgb(195, 214, 0) 100%);
background: -ms-linear-gradient(left, rgb(169, 106, 141) 0%, rgb(95, 95, 110) 40%, rgb(87, 109, 90) 67%, rgb(195, 214, 0) 100%);
background: -moz-linear-gradient(left, rgb(169, 106, 141) 0%, rgb(95, 95, 110) 40%, rgb(87, 109, 90) 67%, rgb(195, 214, 0) 100%);
background: linear-gradient(to right, rgb(169, 106, 141) 0%, rgb(95, 95, 110) 40%, rgb(87, 109, 90) 67%, rgb(195, 214, 0) 100%);

    z-index: 1;
    background-size: cover;
    opacity: 1;
    mix-blend-mode: multiply;
    position: absolute;
    top: 0px;
    bottom: 0px;
    left:0px;
    width: 70vw;
    -webkit-clip-path: polygon(0 0, 100% 0, 57% 100%, 0% 100%);
    clip-path: polygon(0 0, 100% 0, 57% 100%, 0% 100%);
}

.slide-overlay {
    position: absolute;
    z-index: 2;
    max-width: 75vw;
    top: 60%;
    transform: translateY(-60%);
    left: 10%;
}

.slide-overlay button {
    margin-right: 10px;
    font-weight: 100;
}

.slide-overlay h1 {
    font-weight: bold;
    color: #c3d600;
    line-height: .7;
    font-size: 50px;
}

.slide-overlay h2 {
    line-height: .7;
    font-weight: 100;
    font-size: 24px;
    color: white;
}

@media (min-width: 1500px) {
    .slide-overlay h1 {
        font-weight: bold;
        color: #c3d600;
        line-height: .7;
        font-size: 50px;
    }

    .slide-overlay h2 {
        line-height: .7;
        font-weight: 100;
        font-size: 24px;
        color: white;
    }
}

@media (max-width: 1270px) {
    #head-wrapper img {
        margin-right: 65px !important;
    }
    #head-wrapper .social {
        margin-left: 20px !important;
    }
}

@media (min-width: 1100px) {
    .slide-overlay h1 {
        font-weight: bold;
        color: #c3d600;
        line-height: .7;
        font-size: 35px;
    }

    .slide-overlay h2 {
        line-height: .7;
        font-weight: 100;
        font-size: 20px;
        color: white;
    }
}

@media(max-width: 767px) {
    .slide-overlay {
        display: none;
    }

}

.slide-overlay button {
    margin-top: 15px;
}

h1, h2, h3, h4, p {
    font-family: 'Open Sans', sans-serif !important;
}

#article #author img {
    width: auto;
    height: 80px;
}

/*NAV*/
.navbar, .navbar-default, .navbar-fixed-top {
background: -webkit-linear-gradient(left, rgb(169, 106, 141) 0%, rgb(95, 95, 110) 40%, rgb(87, 109, 90) 67%, rgb(195, 214, 0)100%) !important;
background: -o-linear-gradient(left, rgb(169, 106, 141) 0%, rgb(95, 95, 110) 40%, rgb(87, 109, 90) 67%, rgb(195, 214, 0) 100%) !important;
background: -ms-linear-gradient(left, rgb(169, 106, 141) 0%, rgb(95, 95, 110) 40%, rgb(87, 109, 90) 67%, rgb(195, 214, 0) 100%) !important;
background: -moz-linear-gradient(left, rgb(169, 106, 141) 0%, rgb(95, 95, 110) 40%, rgb(87, 109, 90) 67%, rgb(195, 214, 0) 100%) !important;
background: linear-gradient(to right, rgb(169, 106, 141) 0%, rgb(95, 95, 110) 40%, rgb(87, 109, 90) 67%, rgb(195, 214, 0) 100%) !important;
padding: 4px 0px;
-webkit-box-shadow: 0px 5px 16px -8px rgba(0,0,0,0.75);
-moz-box-shadow: 0px 5px 16px -8px rgba(0,0,0,0.75);
box-shadow: 0px 5px 16px -8px rgba(0,0,0,0.75);
}

#head-wrapper {
    /*padding: 4px 0;*/
}

#head-wrapper li {
    font-size: 18px;
}

#head-wrapper .menu-primary-container {
    display: inline-block;
    vertical-align: middle;
}

.swiper-container-home {
    overflow-x: hidden;
    height: 100% !important;
}

.swiper-container-home button {
    color: white;
}

.swiper-container-home .swiper-pagination-home {
    max-width: 10px;
    position: absolute;
    right: 30px;
    left: auto;
    top: 70%;
    transform: translateY(-70%);
    vertical-align: middle;
    z-index: 99;
}

.swiper-container-home img {
    width: 100%;
    height: auto;
}

.swiper-container-home .swiper-pagination-bullet {
    height: 10px;
    width: 10px;
    background: white;
}

@media (max-width: 1024px) {
.slide-bg {
    width: 100vw !important;
}
.slide-overlay {
    top: 50%;
    transform: translateY(-50%);
}
}

@media (max-width: 768px) {
.slide-bg {
    width: 100vw !important;
}
.slide-overlay {
    top: 50%;
    transform: translateY(-50%);
}
.slide-overlay h1 {
    font-weight: bold;
    color: #c3d600;
    line-height: .7;
    font-size: 30px;
}

.slide-overlay h2 {
    line-height: .7;
    font-weight: 100;
    font-size: 20px;
    color: white;
}
}


#landing {
    /*display: none;*/
}

@media (max-width: 500px) {
    .slide-overlay h1 {
        font-size: 30px;
    }
    .slide-overlay h2 {
        font-size: 16px;
    }
}

#head-wrapper {
    text-align: center;
}

#head-wrapper img {
    margin-right: 100px;
}

#head-wrapper .social {
    display: inline-block;
    margin-left: 50px;
}

#head-wrapper .social li {
    display: inline-block;
    margin-left: 15px;
}

#clients .container{
    overflow-x: hidden;
}

#our-agency {
    padding: 100px 0;
}

#our-agency h2 {
    margin-top: 0px;
}

section#approach, #service-intro {
    padding: 50px 0px;
}

#services .hover-service {
    z-index: 99;
}

#latest-news .latest-news-inner .content h4 {
    max-width: 85%;
}

.menu-item-has-children:after {
    content: "\f078";
    font-family: FontAwesome;
    font-style: normal;
    font-weight: normal;
    text-decoration: inherit;
    color: #000;
    font-size: 13px;
    padding-right: 0.5em;
    position: absolute;
    top: 19px;
    right: -9px;
    color: white;
    cursor: pointer;
}

/*service nav*/
#services-nav {
    display: none;
}

.home #services-nav {
    display: block;
}

.swiper-container-home .next {
    color: white;
    position: absolute;
    right: 15px;
    top: 50%;
    transform: translateY(-50%);
}

.swiper-container-home .next i {
    font-size: 30px;
    color: white;
    cursor: pointer;
    z-index: 999;
}

.swiper-container-home .prev {
    color: white;
    position: absolute;
    left: 15px;
    top: 50%;
    transform: translateY(-50%);
    z-index: 999;
}

.swiper-container-home .prev i {
    font-size: 30px;
    color: white;
    cursor: pointer;
    z-index: 999;
}

#services li:first-of-type .hover-service {
    left: 10px;
}

#contact p, #contact h2, #contact .section-title {
    color: #9d9d9c;
    border-color: #9d9d9c;
}

/*employee news*/
#employee-news {
    padding: 50px 0;
    background:#e5e5e5;
}
#employee-news h2 {
    margin-top: 0px;
    text-align: center;
}

#employee-news p {
    color: #9d9d9c;
}

.center {
    text-align: center;
}

.employee-article {
    background: white;
    border-radius: 10px;
}

.employee-article img {
    max-width: 100%;
    border-top-right-radius: 10px;
    border-top-left-radius: 10px;
}

.employee-article__content {
    padding: 25px;
}
.employee-article__content h3 {
    margin-top: 0px;
}

